# DecodeNote

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: DecodeNote_项目开发文档.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  detect.rs  document.rs  encoding.rs  error.rs  file_io.rs  lib.rs  main.rs
src/components/: EncodingBar.tsx  StatusBar.tsx  Toolbar.tsx
src/editor/: CodeMirrorEditor.tsx
src/styles/: index.css
