[package]
name = "decodenote"
version = "0.1.0"
description = "A lightweight TXT encoding detector and editor"
authors = ["DecodeNote"]
edition = "2021"

[lib]
name = "decodenote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
chardetng = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
